--- a/csv_app/templates/csv_app/index.html
+++ b/csv_app/templates/csv_app/index.html
@@ -82,7 +82,7 @@
             {% csrf_token %}
             <div class="mb-3" style="font-size: 130%;">
                 <label for="formFile" class="form-label">※対応メーカー：
-                    <a href="https://shop.tomswear.com/front/app/common/login/" target="_blank">TOMS</a> / 
+                    <a href="https://store.tomswear.com/" target="_blank">TOMS</a> / 
                     <a href="https://cabclothing.jp/" target="_blank">CAB</a> / 
                     <a href="http://felicol.asg-web.com/login/login.html" target="_blank">フェリック</a> / 
                     <a href="https://www.lifemaxonline.com/login" target="_blank">ボンマックス</a> / 
