--- a/csv_app/templates/csv_app/master.html
+++ b/csv_app/templates/csv_app/master.html
@@ -199,13 +199,15 @@
                                         <label for="trade_hinban" style="margin-left: 20px">品番:</label>
                                         <input class="form-control" type="text" id="trade_hinban" style="width: 130px;margin-left: 10px;">
                                         </div>
-                                     <div style="text-align: right;">（例：TS-1719-044）</div>
                                     </div>
                                 </div>
                                 <div>
                                     <button class="btn btn-primary" id="trade_hinban_toroku" type="submit">登録</button>
                                 </div>
-                            </div>                            
+                            </div>
+                            <div style="color: red;">
+                                登録時注意：「品番（TS-1719）+カラーコード(-044)」で登録して下さい（例：TS-1719-044）<br>※カラーコードはトレードHPで確認して下さい。
+                            </div>                          
                         </form>
                             
                     </div>
