--- a/csv_app/templates/csv_app/index.html
+++ b/csv_app/templates/csv_app/index.html
@@ -85,7 +85,7 @@
                     <a href="https://store.tomswear.com/" target="_blank">TOMS</a> / 
                     <a href="https://cabclothing.jp/" target="_blank">CAB</a> / 
                     <a href="http://felicol.asg-web.com/login/login.html" target="_blank">フェリック</a> / 
-                    <a href="https://www.lifemaxonline.com/login" target="_blank">ボンマックス</a> / 
+                    <a href="https://www.bonmaxonline.com/" target="_blank">ボンマックス</a> / 
                     <a href="https://order.shoeisilk.com/mypage/login.php?transactionid=7e28dac516b0e3754f3db6c5cb3b103b3f40fd1a" target="_blank">松栄シルク</a> / 
                     <a href="https://markless.jp/" target="_blank">トレードワークス</a>
                 </label>
