--- a/csv_app/templates/csv_app/master.html
+++ b/csv_app/templates/csv_app/master.html
@@ -84,7 +84,7 @@
             <hr>
             <!-- CSV方式 -->
             <div class="back2">               
-                <h2>CSVインポート</h2>
+                <h2>CSVインポート（新基幹システムの「ボディマスタ」を、そのまま取り込み）</h2>
                 <hr>
                 <span style="color: red;">{{csv_message}}</span>
                 <form action="{% url 'master' %}" method="post" enctype="multipart/form-data">
